name:                reflex-material
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/alasconnect/reflex-material#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Jones
maintainer:          bcj@alasconnect.com
copyright:           AlasConnect
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.Material
                     , Reflex.Material.Basic
                     , Reflex.Material.Button
                     , Reflex.Material.Checkbox
                     , Reflex.Material.Card
                     , Reflex.Material.Common
                     , Reflex.Material.Core
                     , Reflex.Material.Drawer
                     , Reflex.Material.Icon
                     , Reflex.Material.Fab
                     , Reflex.Material.Foreign
                     , Reflex.Material.FormField
                     , Reflex.Material.LayoutGrid
                     , Reflex.Material.List
                     , Reflex.Material.Menu
                     , Reflex.Material.Select
                     , Reflex.Material.Svg
                     , Reflex.Material.Textfield
                     , Reflex.Material.Toolbar
                     , Reflex.Material.Types
                     , Reflex.Material.Typography
                     , Reflex.Material.Util
  build-depends:       base >= 4.7 && < 5
                     , reflex-dom
                     , text >= 1.2 && < 1.3
                     , bimap
                     , containers
                     , data-default
                     , lens
  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends:   ghcjs-base
                   , ghcjs-dom
  else
    hs-source-dirs: src-ghc

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecursiveDo
                     , ScopedTypeVariables

executable reflex-material-exe
  hs-source-dirs:      example
  main-is:             Main.hs
  other-modules:       Buttons
                     , Cards
                     , Checkbox
                     , Fab
                     , LayoutGrid
                     , Lists
                     , Select
                     , Textfield
                     , Toolbar
                     , Typography
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , reflex
                     , reflex-dom
                     , reflex-material
                     , text >= 1.2 && < 1.3
                     , containers
                     , lens
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecursiveDo
                     , ScopedTypeVariables

test-suite reflex-material-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reflex-material
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alasconnect/reflex-material
