name:                reflex-material
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/rvl/reflex-material#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Jones, Rodney Lorrimar
maintainer:          bcj@alasconnect.com, dev@rodney.id.au
copyright:           AlasConnect
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.Material
                     , Reflex.Material.Basic
                     , Reflex.Material.Button
                     , Reflex.Material.Checkbox
                     , Reflex.Material.Card
                     , Reflex.Material.Common
                     , Reflex.Material.Drawer
                     , Reflex.Material.Icon
                     , Reflex.Material.Fab
                     , Reflex.Material.FormField
                     , Reflex.Material.Framework
                     , Reflex.Material.LayoutGrid
                     , Reflex.Material.List
                     , Reflex.Material.Menu
                     , Reflex.Material.Radio
                     , Reflex.Material.Select
                     , Reflex.Material.Svg
                     , Reflex.Material.Textfield
                     , Reflex.Material.Toolbar
                     , Reflex.Material.Types
                     , Reflex.Material.Typography
  other-modules:       Reflex.Material.Util
  build-depends:       base >= 4.7 && < 5
                     , reflex-dom
                     , reflex-dom-core
                     , ghcjs-dom
                     , jsaddle
                     , jsaddle-dom
                     , text >= 1.2 && < 1.3
                     , bimap
                     , containers
                     , data-default
                     , lens
                     , say
  if impl(ghcjs)
    ghc-options:       -dedupe
    cpp-options:       -DGHCJS_BROWSER
    build-depends:     ghcjs-base

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecursiveDo
                     , ScopedTypeVariables
                     , TypeFamilies
                     , FlexibleContexts
                     , RecordWildCards

executable reflex-material-example
  hs-source-dirs:      example
  main-is:             Main.hs
  other-modules:       Examples
                     , Buttons
                     , Cards
                     , Checkbox
                     , Elevation
                     , Fab
                     , LayoutGrid
                     , Lists
                     , Radio
                     , Ripple
                     , Select
                     , SimpleMenu
                     , Styles
                     , Textfield
                     , Toolbar
                     , Typography
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , containers
                     , lens
                     , text >= 1.2 && < 1.3
                     , clay
                     , ghcjs-dom
                     , reflex
                     , reflex-dom
                     , reflex-dom-core
                     , reflex-material
                     , jsaddle
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecursiveDo
                     , ScopedTypeVariables
                     , TypeFamilies
                     , FlexibleContexts
  if impl(ghcjs)
    ghc-options:       -dedupe
    cpp-options:       -DGHCJS_BROWSER
  else
    other-modules:     Util.DevServer
    build-depends:     jsaddle-warp
                     , warp
                     , wai
                     , wai-app-static
                     , websockets


source-repository head
  type:     git
  location: https://github.com/rvl/reflex-material
