name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , obelisk-generated-static
               , text
               , bytestring
               , containers
               , lens
               , clay
               , reflex
               , reflex-dom
               , reflex-dom-core
               , reflex-material
               , jsaddle
               , jsaddle-dom
  exposed-modules:
    Frontend
  other-modules:
      Buttons
    , Cards
    , Checkbox
    , Elevation
    , Fab
    , LayoutGrid
    , Lists
    , Radio
    , Ripple
    , Select
    , Menu
    , Styles
    , TextField
    , TopAppBar
    , Typography
  ghc-options: -Wall
  default-extensions:  OverloadedStrings
                     , RecursiveDo
                     , ScopedTypeVariables
                     , TypeFamilies
                     , FlexibleContexts

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
               , reflex-material
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
  if impl(ghcjs)
    ghc-options:       -dedupe
    cpp-options:       -DGHCJS_BROWSER
