name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , text

               , reflex-material
               , clay
               , lens
               , containers
               , jsaddle
               , jsaddle-dom
               , reflex-dom-core
  exposed-modules:
    Frontend
  other-modules:
      Buttons
    , Cards
    , Checkbox
    , Elevation
    , Fab
    , LayoutGrid
    , Lists
    , Radio
    , Ripple
    , Select
    , Menu
    , Styles
    , TextField
    , TopAppBar
    , Typography
  ghc-options: -Wall
  default-extensions:  OverloadedStrings
                     , RecursiveDo
                     , ScopedTypeVariables
                     , TypeFamilies
                     , FlexibleContexts

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
