name:                reflex-material
version:             0.0.1.0
homepage:            https://github.com/rvl/reflex-material#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Jones, Rodney Lorrimar
maintainer:          bcj@alasconnect.com, dev@rodney.id.au
copyright:           AlasConnect
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.Material
                     , Reflex.Material.Basic
                     , Reflex.Material.Button
                     , Reflex.Material.Checkbox
                     , Reflex.Material.Card
                     , Reflex.Material.Common
                     , Reflex.Material.Drawer
                     , Reflex.Material.Icon
                     , Reflex.Material.Fab
                     , Reflex.Material.FormField
                     , Reflex.Material.Framework
                     , Reflex.Material.LayoutGrid
                     , Reflex.Material.List
                     , Reflex.Material.Menu
                     , Reflex.Material.Radio
                     , Reflex.Material.Select
                     , Reflex.Material.Svg
                     , Reflex.Material.TextField
                     , Reflex.Material.TopAppBar
                     , Reflex.Material.Types
                     , Reflex.Material.Typography
  other-modules:       Reflex.Material.Util
  build-depends:       base >= 4.7 && < 5
                     , reflex-dom
                     , reflex-dom-core
                     , jsaddle
                     , jsaddle-dom
                     , text >= 1.2 && < 1.3
                     , bimap
                     , containers
                     , data-default
                     , lens
                     , say
  if impl(ghcjs)
    ghc-options:       -dedupe
    cpp-options:       -DGHCJS_BROWSER
    build-depends:     ghcjs-base
                     , ghcjs-dom

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecursiveDo
                     , ScopedTypeVariables
                     , TypeFamilies
                     , FlexibleContexts
                     , RecordWildCards

source-repository head
  type:     git
  location: https://github.com/rvl/reflex-material
